--- a/index.html
+++ b/index.html
@@ -6,13 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <title>Pet Finder</title>
 </head>
 
 <body>
+    <header class="bg-light text-center mb-4 p-3">
+        <img src="assets/img/logo.png" alt="pet-finder">
+    </header>
 
-
-
+    <div class="container">
+        <form id="pet-form">
+            <label for="animal">Animal</label>
+            <select id="animal" class="form-control form-control-lg mb-3">
+                <option value="cat">Cat</option>
+                <option value="dog">Dog</option>
+                <option value="bird">Bird</option>
+                <option value="barnyard">Barnyard</option>
+            </select>
+        </form>
+    </div>
 
     <script src=js/main.js></script>
 </body>
