--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                 <option value="bird">Bird</option>
                 <option value="barnyard">Barnyard</option>
             </select>
+            <input type="text" id="zip" class="form-control form-control-lg" placeholder="Enter your zipcode">
+            <input type="submit" value="Find" class="btn btn-dark btn-lg btn-block mt-3">
         </form>
+
+        <div id="results"></div>
     </div>
 
     <script src=js/main.js></script>
